# calculator-ai-sigma

./: .env.example  DOCKER.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend-build  IMPLEMENTATION.md  LICENSE  README.md  config.json  docker-compose.yml  init-db.sql
backend/: .dockerignore  .gitignore  CMakeLists.txt  impl.cpp  main.cpp  start.sh
frontend/: AGENT.md  README.md  package-lock.json  package.json  svelte.config.js
frontend/src/lib/: MarkdownRenderer.svelte  MathPreview.svelte  MessageBubble.svelte  Sidebar.svelte  api.ts  stores.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
